--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,7 +3,7 @@
 # Copyright 2015, John Paul the Great Catholic University
 
 - name: Lookup version of LeoFS Manager
-  shell: "pkgin list | grep fifo-sniffle | awk '{print $1}'"
+  shell: "pkgin list | grep leo_manager | awk '{print $1}'"
   register: leofs_version_installed
   changed_when: "leofs_version_installed.stdout != '{{ leofs_manager_version_required }}'"
   ignore_errors: True
